--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -13,8 +13,9 @@
     <RepositoryUrl>https://github.com/TomaszRewak/C-sharp-console-gui-framework</RepositoryUrl>
     <PackageTags>console, gui, framework</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.1.0</Version>
-    <PackageReleaseNotes>1.1.0 - Adding BreakPanel and Decorator
+    <Version>1.2.0</Version>
+    <PackageReleaseNotes>1.2.0 - Adding modifiable IConsole interface and fixing collection setters in HorizontalStackPanel and VerticalStackPanel
+1.1.0 - Adding BreakPanel and Decorator
 1.0.5 - Adding basic mouse support
 1.0.4 - Adding support for window resizing</PackageReleaseNotes>
   </PropertyGroup>
