--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -13,8 +13,9 @@
     <RepositoryUrl>https://github.com/TomaszRewak/C-sharp-console-gui-framework</RepositoryUrl>
     <PackageTags>console, gui, framework</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.2.2</Version>
-    <PackageReleaseNotes> 1.2.2 - Fixing AdjustWindowSize exception when window has 0 height
+    <Version>1.3.0</Version>
+    <PackageReleaseNotes>1.3.0 - Making the ScrollUpKey and the ScrollDownKey configurable in the VerticalScrollPanel
+1.2.2 - Fixing AdjustWindowSize exception when window has 0 height
 1.2.1 - Fixing exceptions on window resizing
 1.2.0 - Adding modifiable IConsole interface and fixing collection setters in HorizontalStackPanel and VerticalStackPanel
 1.1.0 - Adding BreakPanel and Decorator
