--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -14,7 +14,8 @@
     <PackageTags>console, gui, framework</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>1.4.0</Version>
-    <PackageReleaseNotes>1.4.0 - Customizable data grid style
+    <PackageReleaseNotes>1.4.1 - Fixing the refresh bug on swapping of the ConsoleManager.Content
+1.4.0 - Customizable data grid style
 1.3.0 - Making the ScrollUpKey and the ScrollDownKey configurable in the VerticalScrollPanel
 1.2.2 - Fixing AdjustWindowSize exception when window has 0 height
 1.2.1 - Fixing exceptions on window resizing
