--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -13,8 +13,9 @@
     <RepositoryUrl>https://github.com/TomaszRewak/C-sharp-console-gui-framework</RepositoryUrl>
     <PackageTags>console, gui, framework</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.4.1</Version>
-    <PackageReleaseNotes>1.4.1 - Fixing the refresh bug on swapping of the ConsoleManager.Content
+    <Version>1.4.2</Version>
+    <PackageReleaseNotes>1.4.2 - Fixing the break panel drawing new line characters
+1.4.1 - Fixing the refresh bug on swapping of the ConsoleManager.Content
 1.4.0 - Customizable data grid style
 1.3.0 - Making the ScrollUpKey and the ScrollDownKey configurable in the VerticalScrollPanel
 1.2.2 - Fixing AdjustWindowSize exception when window has 0 height
