--- a/ConsoleGUI.Example/ConsoleGUI.Example.csproj
+++ b/ConsoleGUI.Example/ConsoleGUI.Example.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\ConsoleGUI\ConsoleGUI.csproj" />
   </ItemGroup>
-
 </Project>
