--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Tomasz Rewak</Authors>
     <Company />
@@ -25,5 +24,4 @@
 1.0.5 - Adding basic mouse support
 1.0.4 - Adding support for window resizing</PackageReleaseNotes>
   </PropertyGroup>
-
 </Project>
