--- a/ConsoleGUI/ConsoleGUI.csproj
+++ b/ConsoleGUI/ConsoleGUI.csproj
@@ -23,5 +23,6 @@
 1.1.0 - Adding BreakPanel and Decorator
 1.0.5 - Adding basic mouse support
 1.0.4 - Adding support for window resizing</PackageReleaseNotes>
+    <AssemblyVersion>2024.2.4.1031</AssemblyVersion>
   </PropertyGroup>
 </Project>
