--- a/ConsoleGUI.Example/ConsoleGUI.Example.csproj
+++ b/ConsoleGUI.Example/ConsoleGUI.Example.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <AssemblyVersion>2024.2.4.1031</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleGUI\ConsoleGUI.csproj" />
